# XSIMD-example

./: .gitignore  .gitmodules  CMakeLists.txt  simd  simd.cpp  simd.s
install/share/pkgconfig/: xsimd.pc
